# xdg-desktop-portal-gnome

./: .gitignore  .gitlab-ci.yml  NEWS  README.md  configure.ac  meson.build  meson_options.txt  xdg-desktop-portal-gnome.doap
.gitlab-ci/: install-meson-project.sh
data/: Makefile.am.inc  gnome.portal  gnome.portal.in  meson.build  org.freedesktop.impl.portal.desktop.gnome.service.in  org.gnome.GlobalShortcutsProvider.xml  org.gnome.GlobalShortcutsRebind.xml  org.gnome.Mutter.Clipboard.xml  org.gnome.Mutter.RemoteDesktop.xml  org.gnome.Mutter.ScreenCast.xml  org.gnome.Shell.Introspect.xml  org.gnome.Shell.Screenshot.xml  org.gnome.Shell.xml  org.gtk.Notifications.xml  xdg-desktop-portal-gnome.desktop.in.in  xdg-desktop-portal-gnome.service.in
demo/: README.md  build-and-run.sh  display-config-mock.py  follow-xdpg-log.sh  mock-build-and-run.sh
po/: LINGUAS  Makevars  POTFILES.in  ab.po  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fil.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  kw.po  lt.po  lv.po  nb.po  (+21 more)
src/: Makefile.am.inc  access.c  access.h  account.c  account.h  accountdialog.c  accountdialog.h  accountdialog.ui  appchooser.c  appchooserdialog.c  appchooserdialog.h  appchooserdialog.ui  appchooserrow.c  appchooserrow.h  appchooserrow.ui  background.c  clipboard.c  clipboard.h  displaystatetracker.c  displaystatetracker.h  dynamic-launcher.c  externalwindow-wayland.c  externalwindow-wayland.h  externalwindow-x11.c  externalwindow-x11.h  externalwindow.c  externalwindow.h  fc-monitor.c  fdonotification.c  filechooser.c  globalshortcuts.c  globalshortcuts.h  gnome-bg-slide-show.c  gnome-bg-slide-show.h  gnome-bg.c  gnome-bg.h  gnomeinputcapture.c  gnomeinputcapture.h  gnomescreencast.c  gnomescreencast.h  (+53 more)
subprojects/: libadwaita.wrap  libgxdp.wrap
